chore: update swagger ui doc
